convert the numbers 1, 5, 10, 50, 100, 500, and 1000 into their corresponding roman numerals

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
             <label for="number">Enter your number:</label>
             <input id="number" type="number" class="form-control".>
           </div>
-          <button type="submit" class="btn btn-primary">Convert!</submit>
+          <button type="submit" class="btn btn-info">Convert!</submit>
         </form>
       </div>
+      <div id="result" class="well">
+      </div>
     </div>
-    <div id="result">
-    </div>
+
   </body>
 </html>
